# conways-gol

./: CMakeCache.txt  CMakeLists.txt  GOL  GOLConfig.h  GOLConfig.h.in  Makefile  README.md  cmake_install.cmake  main.cpp
